--- a/earthquakes_volcanoes_in_social_media.ipynb
+++ b/earthquakes_volcanoes_in_social_media.ipynb
@@ -75,10 +75,10 @@
    "outputs": [],
    "source": [
     "# Secret info\n",
-    "consumer_key = '2dVrc2vC4phhoSx7EeKLu0DOj' \n",
-    "consumer_secret = 'ZMvfd71lcLLtS9pj3KG9ZIB186BWITufhFXUudeqsg8jFMNsY8'\n",
-    "access_token = '946272380971864064-KFoi2F1wyf0vqTik69xkp93tYvxqE34'\n",
-    "access_token_secret = 'xhQ4wTmRzZQM1cyI8Y0LaWEYRKE0mNt3hccKTqVxKJ5Mf' "
+    "consumer_key = '' \n",
+    "consumer_secret = ''\n",
+    "access_token = '-'\n",
+    "access_token_secret = '' "
    ]
   },
   {
